--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
