--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.2",
     "react": "^16.11.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.11.0",
     "react-input-range": "^1.3.0",
     "react-router-dom": "^5.1.2",
