--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "dependencies": {
     "@kiyasov/noty": "^1.1.4",
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "animate.css": "^3.7.2",
     "material-icons-react": "^1.0.4",
+    "material-table": "^1.56.1",
     "noty": "^3.2.0-beta",
     "react": "^16.11.0",
     "react-animated-css": "^1.2.1",
