--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "animate.css": "^3.7.2",
+    "autosize": "^4.0.2",
     "material-icons-react": "^1.0.4",
     "material-table": "^1.56.1",
     "noty": "^3.2.0-beta",
