--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^16.11.0",
     "react-input-range": "^1.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "react-slick": "^0.25.2"
   },
   "scripts": {
     "start": "react-scripts start",
