--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-slick": "^0.25.2",
     "react-snake": "^1.0.3",
     "react-snake-game": "^1.0.9",
+    "recompose": "^0.30.0",
+    "styled-components": "^5.1.0",
+    "styled-components-theme-connector": "^0.1.3",
     "uifx": "^2.0.7"
   },
   "scripts": {
