--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.11.0",
     "react-input-range": "^1.3.0",
+    "react-ionicons": "^3.1.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-slick": "^0.25.2",
